Fixing nav menu overflow on scroll up.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -116,7 +116,7 @@ nav#nav
 	height: 150vh;
 	left: 0;
 	position: fixed;
-	top: -150vh;
+	top: -175vh;
 	width: 100%;
 	z-index: 9000;
 
